<resources>
    <string name="app_name">SZFM Mobile Measurement</string>
    <string name="open">Menu opened</string>
    <string name="close">Menu closed</string>
    <string name="homeText">Ez az alkalmazás azt a célt szolgálja, hogy a felhasználó távolságot tudjon mérni a mobiltelefonjával. A mérés pontossága érdekében kérjük, hogy igyekezzen lehetőségek szerint egy irányba mozgatni a telefont, minél kevesebb hibával.</string>
    <string name="startMeasure">Mérés indítása</string>
    <string name="info">infoIcon</string>
    <string name="welcome">Üdvözlünk az alkalmazásban!</string>
    <string name="welcome_info">Információ</string>
    <string name="version">Verziószám:</string>
    <string name="version_number">0.0.5</string>
    <string name="copyright">\@TeamBFK 2021</string>
    <string name="measureDistanceText">Mérni kívánt távolság:</string>
    <string name="distance1">40 cm</string>
    <string name="distance2">1 m</string>
    <string name="distance3">2 m</string>
    <string name="distance4">5 m</string>
    <string name="Next">Következő</string>
    <string name="measureID">Mérés ID:</string>
    <string name="measureIDHint">ID</string>
    <string name="telID">Telefon ID:</string>
    <string name="telIDHint">telID</string>
    <string name="example">Mintavételezés:</string>
    <string name="orientation">Telefon Orientációja:</string>
    <string name="horizontal">Vízszintes</string>
    <string name="vertical">Függőleges</string>
    <string name="sampling_10ms">10 ms</string>
    <string name="sampling_100ms">100 ms</string>
    <string name="imageViewContentDescription">This is the schema of the application.</string>
    <string name="Result">Results fragment</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Restart">Restart</string>
    <string name="measureNumber">Mérés Száma </string>
    <string name="Example">example</string>
    <string name="Night_mode">Night mode</string>
    <string name="deleteMeasure">Mérések törlése</string>
    <string name="sampleAccelerometerData">X: 0.00000123 (sample)</string>
    <string name="Username">Felhasználónév</string>
    <string name="Password">jelszó</string>
    <string name="Connect">Kapcsolódás</string>
    <string name="DBtext">Database text</string>
    <string name="sampleCompletionText">0 / 5</string>
    <string name="sampleXValueText">X: - </string>
    <string name="sampleYValueText">Y: - </string>
    <string name="sampleZValueText">Z: - </string>
    <string name="sampleTimestampValueText">Timestamp: -</string>
    <string name="sampleDeltaTime">delta time: - </string>
    <string name="sampleXDistanceText">X: - cm</string>
    <string name="MainPage">Főoldal</string>
    <string name="Expected_value">Várt érték</string>
    <string name="Value">Érték</string>
    <string name="Measured_value">Mért értékek</string>
    <string name="Date">Dátum</string>
    <string name="MeasureResults">A MÉRÉS EREDMÉNYE</string>
    <string name="Start_New_measure">Új mérés</string>
    <string name="authors">Fejlesztők:  \n
                            Halász Dániel \n
                            Hegedűs Péter \n
                            Káplár István \n
                            Nyika Benedek \n
                            Sápi Gábor</string>
</resources>